# langchain-zeusdb

./: README.md  pyproject.toml
.github/actions/uv_setup/: action.yml
.github/scripts/: check_diff.py
.github/workflows/: _compile_integration_test.yml  _lint.yml  _release.yml  _test.yml
libs/zeusdb/: CHANGELOG.md  README.md  pyproject.toml
libs/zeusdb/docs/: vectorstores.ipynb
libs/zeusdb/langchain_zeusdb/: vectorstores.py
libs/zeusdb/tests/integration_tests/: test_vectorstores.py
libs/zeusdb/tests/unit_tests/: test_imports.py
src/langchain_zeusdb/: __init__.py  vectorstores.py
tests/integration_tests/: test_vectorstores.py
tests/unit_tests/: test_imports.py
